[package]
name = "lnd-rust"
version = "0.5.0"
authors = ["LightningPeach <contact@lightningpeach.com>"]
description = "Rust binding to the Lightning Network Daemon"
readme = "README.md"
license = "MIT"
repository = "https://github.com/LightningPeach/lnd-rust"
edition = "2018"

[dependencies]

file = "*"
rustc-serialize = "*"

futures = "0.3.1"
futures-cpupool = "0.1.*"

protobuf = "2"
#protobuf = { git = "https://github.com/stepancheg/rust-protobuf" }

grpc = { git = "https://github.com/stepancheg/grpc-rust" }
#grpc = "0.8.*"
grpc-protobuf = { git = "https://github.com/stepancheg/grpc-rust" }
#grpc-protobuf = "0.8.*"

httpbis = { git = "https://github.com/stepancheg/rust-http2" }

env_logger      = "~0.5"

tls-api = "0.3.*"
tls-api-native-tls = "0.3.*"

bytes = "0.5.*"


[build-dependencies]

protoc-rust-grpc = { git = "https://github.com/stepancheg/grpc-rust" }
#protoc-rust-grpc = "0.8.*"
